--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,7 +16,7 @@ jobs:
 
     - uses: actions/checkout@v3
       with:
-        token: ${{  secretes.GH_PAT  }}
+        token: ${{  secrets.GH_PAT  }}
         submodules: true
 
     - name: Set up JDK 17
