--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -48,9 +48,8 @@ jobs:
         username: ${{ secrets.SSH_USERNAME }}
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         port: ${{ secrets.SSH_PORT }}
-        script: |
-          sudo su - 
-          docker stop $(docker ps -aq) 
-          docker rm $(docker ps -aq) 
-          docker pull ${{ secrets.DOCKERHUB_USERNAME }}/${{ vars.APP_NAME }}
-          docker run -d -p 8080:8080 --name ${{ vars.APP_NAME }} ${{ secrets.DOCKERHUB_USERNAME }}/${{ vars.APP_NAME }}
+        script: | 
+          sudo docker stop $(sudo docker ps -aq) 
+          sudo docker rm $(sudo docker ps -aq) 
+          sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/${{ vars.APP_NAME }}
+          sudo docker run -d -p 8080:8080 --name ${{ vars.APP_NAME }} ${{ secrets.DOCKERHUB_USERNAME }}/${{ vars.APP_NAME }}
